<resources>
    <string name="app_name">RAPPI 5-4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrar">Nuevo_Usuario</string>
    <string name="gicpc_eats">GICPC-EATS</string>
    <string name="nombre_completo">Nombre-Completo</string>
    <string name="correo_electronico">Correo_electronico</string>
    <string name="password">Contraseña</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="ya_estas_registrado">Ya Estas Registrado?</string>
    <string name="iniciar_sesion_">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="no_tiene_usuario">no tiene usuario?</string>
    <string name="crear_usuario_nuevo">Crear usuario Nuevo</string>
    <string name="favorito">Favorito</string>
    <string name="home">Home</string>
    <string name="comida_del_dia">Comida Del Dia</string>
    <string name="Nombre_inicio">Nombre Completo</string>
    <string name="Contra_inicio">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carrito">Mi carrito</string>
    <string name="Nombre">Chacon</string>
    <string name="Correo">ja.lopez19@info.uas..mx</string>
    <string name="registrar_nuevo_usuario">REGISTRAR NUEVO USUARIO</string>
    <string name="busca_tu_comida">Busca Tu Comida</string>
    <string name="usurio">usuario</string>
    <string name="btn_registra">Registrar</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="_5_0">5.0</string>
    <string name="nombre_del_producto">Nombre Del Producto</string>
    <string name="Restaurantes">Restaurantes</string>
    <string name="rapi">Rappi</string>
    <string name="realizar_pedido">Realizar pedido</string>


</resources>